--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="image/books.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
   </head>
-  
+<!--  ini comment  -->
   <body>
     <header>
         <nav class="navbar">
